Mark up the cart button

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -17,6 +17,13 @@
     "form": {
       "submit": "Preorder"
     }
+  },
+  "cart": {
+    "button": {
+      "filled": "Your cart is filled",
+      "empty": "Your cart is empty",
+      "close": "close"
+    }
   }
 }
 
