--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -19,10 +19,25 @@
     }
   },
   "cart": {
+    "general": {
+      "title": "Cart",
+      "preorder_info": "All preorders ship free this March.",
+      "support_title": "Any questions?",
+      "support_email": "support@getfitra.com",
+      "checkout": "Checkout",
+      "empty": "Your cart is empty",
+      "back": "Back to Fitra"
+    },
     "button": {
       "filled": "Your cart is filled",
       "empty": "Your cart is empty",
       "close": "close"
+    },
+    "lines": {
+      "title": "Order Summary",
+      "shipping": "Shipping",
+      "subtotal": "Subtotal",
+      "free": "Free"
     }
   }
 }
